server_log_fixed_stack.txt
/Users/hectorgarcia/Desktop/LyoBackendJune/venv/lib/python3.12/site-packages/webrtcvad.py:1: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.
  import pkg_resources
Traceback (most recent call last):
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/test_audio_server.py", line 4, in <module>
    from lyo_app.app_factory import create_app
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/app_factory.py", line 11, in <module>
    from .routers import (
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/routers/messaging.py", line 4, in <module>
    from lyo_app.chat.routes import router
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/chat/__init__.py", line 16, in <module>
    from lyo_app.chat.routes import router as chat_router
  File "/Users/hectorgarcia/Desktop/LyoBackendJune/lyo_app/chat/routes.py", line 795
    )
    ^
SyntaxError: unmatched ')'
